# from-nand-to-raytracer

./: Main.jack  Main.vm  README.md
jack-raytracer/: DirectionalLight.jack  Element.jack  Int32.jack  Intersection.jack  Main.jack  Makefile  Number.jack  Plane.jack  Ray.jack  Scene.jack  Sphere.jack  Vec3.jack
rust-raytracer/: .gitignore  Cargo.toml
rust-raytracer/src/: f64.rs  fixed.rs  int30.rs  int32.rs  main.rs  plane.rs  ray.rs  sphere.rs  vector.rs
rust-raytracer/src/elements/: mod.rs  plane.rs  sphere.rs
rust-raytracer/src/lights/: directional.rs
