[package]
name = "rust-raytracer"
version = "0.1.0"
authors = ["Alex Quach <alexhquach@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.23.14"
lazy_static = "1.4.0"

[profile.dev]
opt-level = 1
